--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,17 @@
 #search-cep {
     margin-top: 30px;
 }
+
+
+/* temporary definitions - Start */
+
+body {
+    background-color: black;
+}
+
+#search-cep {
+    background-color: rgb(238, 235, 235);
+}
+
+
+/* temporary definitions - End */
